# APC523-Project

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: linear_stability.md  main.tex  method.md
docs/md/: method.md  truncation_error.md
docs/tex/: appendix.tex  intro.tex  lhs.tex  poisson.tex  rhs.tex  validation.tex
notebooks/: demo.html  demo.ipynb  results.ipynb
output/: README.md  exp3.py  exp4.py  exp5.py  results.ipynb  results_exp3.json  results_exp4_predcorr.json  results_exp5.json
src/ns-solver/: __init__.py  core.py
src/ns2d/: __init__.py  __main__.py  adaptive_time.py  benchmarks.py  boundaries.py  core.py  corrector_step.py  corrector_v2.py  predictor_step.py  rhs_discretization.py  safe_math.py  spatial_discretization.py  utils.py  vorticity.py
src/tests/: test_core.py
