[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ns2d"]

[project]
name = "ns2d"
version = "0.1.0"
description = "2D Navier-Stokes Numerical Solver"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Esteban Nocet-Binois", email = "en4624@princeton.edu"},
    {name = "Marie Joe Sawma", email = "ms6730@princeton.edu"}
]
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
    "typing-extensions>=4.0",
    "pyamg>=4.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.ruff]
line-length = 90
include = ["src/ns2d/**/*.py", "src/ns2d/**/*.pyi", "src/ns2d/**/*.ipynb"]

[tool.ruff.lint]
extend-select = ["B", "I", "RUF", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
allow_untyped_decorators = true
pretty = true
files = ["src/ns2d"]
